# my_VINS

./: .gitignore  README.md  vins_mac.rviz  vins_rviz.rviz
MyTriangulation/: Camera.cpp  Camera.h  FeatureManager.cpp  FeatureManager.h  FeatureRecord.h  MSCKF.cpp  MSCKF.h  g_param.h  main.cpp  math_tool.cpp  math_tool.h
MyTriangulation.xcodeproj/: project.pbxproj
MyTriangulation.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
amber_vins/: CMakeLists.txt  package.xml
amber_vins/launch/: simu.launch  vio.launch
amber_vins/src/: amber_vins_node.cpp  calib.h  camera.cpp  camera.h  data_generator.cpp  data_generator.h  data_generator_node.cpp  main.cpp  mixed_node.cpp  odometry.cpp  odometry.h  utils.h
amber_vins/test/: test_camera.cpp
data_generator/: CMakeLists.txt
data_generator/src/: data_generator.cpp  data_generator.h  data_generator_node.cpp
dataset/calib_data/: camera.yml  image_list.xml
dataset/calib_data/calibrationdata/: ost.txt
msckf_vins/: CMakeLists.txt  package.xml
msckf_vins/launch/: run.launch
msckf_vins/src/: Camera.cpp  Camera.h  FeatureRecord.h  MSCKF.cpp  MSCKF.h  data_generator.cpp  data_generator.h  g_param.h  main.cpp  math_tool.cpp  math_tool.h  old_main.cpp  tic_toc.h
msckf_vins_amber/: CMakeLists.txt  package.xml
msckf_vins_amber/src/: calib.cpp  data_generator.cpp  data_generator.h  main.cpp  odometry.cpp  odometry.h
sensor_processor/: CMakeLists.txt  package.xml
sensor_processor/config/: left_25000704.yml  right_25000709.yml
sensor_processor/launch/: feature_tracker.launch
sensor_processor/src/: sensor_processor_node.cpp
test_quaternion/: FindEigen.cmake  c.cpp  q.h
